assets/static/_css/pycascades/pycascades.css
/* ... */
#sponsors .sponsor-logos .item {
    display: inline-block;
    vertical-align: text-top;
    width: 300px;
    margin: 10px 20px;
}

#sponsors .sponsor-logos .item > .logo {
    margin-left: auto;
    margin-right: auto;
}
#sponsors .sponsor-logos .item p {
    font-size: 1.3ex;
}

#sponsors .sponsor-logos .item.diamond .logo,
#sponsors .sponsor-logos .item.diamond_npo .logo {
    height: 250px;
}

#sponsors .sponsor-logos .item.platinum .logo,
#sponsors .sponsor-logos .item.platinum_npo .logo {
    width: 250px;
    height: 200px;
}
#sponsors .sponsor-logos .item.gold .logo,
#sponsors .sponsor-logos .item.gold_npo .logo {
    width: 200px;
    height: 150px;
}

#sponsors .sponsor-logos .item.silver .logo,
#sponsors .sponsor-logos .item.silver_npo .logo{
    width: 150px;
    height: 90px;
}

#sponsors .sponsor-logos .item a {
    display: block;
    width: 100%;
    height: 100%;
}
@media (min-width: 500px) {
    #sponsors .sponsor-logos .item.title {
        display: block;
        width: 480px;
        height: 160px;
        margin: 0 auto;
    }
}

@media (min-width: 750px) {
    #sponsors .sponsor-logos .item {
        width: 480px;
        margin: 0 20px;
    }

    #sponsors .sponsor-logos .item > .logo {
        margin-right: auto;
        margin-left: auto;
        margin-bottom: 2rem;
    }
    #sponsors .sponsor-logos .item > p {
        margin: auto;
        width: 80%;
    }
    #sponsors .sponsor-logos .item.diamond {
        width: 480px;
    }
    #sponsors .sponsor-logos .item.diamond .logo {
        width: 480px;
        height: 500px;
    }
    #sponsors .sponsor-logos .item.diamond_npo {
        width: 480px;
    }
    #sponsors .sponsor-logos .item.diamond_npo .logo {
        width: 480px;
        height: 375px;
    }

    #sponsors .sponsor-logos .item.platinum .logo {
        width: 480px;
        height: 250px;
    }
    #sponsors .sponsor-logos .item.platinum_npo .logo {
        width: 375px;
        height: 100px;
        margin: auto;
    }

    #sponsors .sponsor-logos .item.gold .logo,
    #sponsors .sponsor-logos .item.gold_npo .logo {
        width: 280px;
        height: 60px;
    }

    #sponsors .sponsor-logos .item.silver .logo,
    #sponsors .sponsor-logos .item.silver_npo .logo {
        width: 200px;
        height: 40px;
    }

    .conduct-violations {
        float: right;
    }
}

.subscribe-form {
}

.subscribe-form input,
.subscribe-form button {
    display: inline-block;
    margin: 8px 4px;
    vertical-align: top;
}

body.page #main {
    margin-bottom: 60px;
}
body.page #main h1 {
    padding-top: 40px;
    padding-bottom: 10px;
    color: #767676;
    font-size: 2.8rem;
    text-align: center;
    line-height: 1.1;
}

body.error #main {
    margin-bottom: 60px;
    text-align: center;
}

.conduct-violations {
    border-radius: 10px;
    margin: 0 0 4ex 0;
    border: 1px solid #ddd;

}
.conduct-violations h3 {
    border-top-left-radius: 10px;
    border-top-right-radius: 10px;
    background-color: #ddd;
    padding: 1ex;
}

.conduct-violations ul {
    padding-left: 2ex;
}

.footnote {
    font-size: 1.5rem;
    color: #7100FF;
}

